--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ prompted the owner to seek for a software solution.
                               <input type="checkbox" class="form-check-input" id="exampleCheck1">
                               <label class="form-check-label" for="exampleCheck1">Remember me</label>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-light"><a href="dash.html">Submit</a></button>
                           </form>
                     </div>
                 </div>
