linked all pages

--- a/products2.html
+++ b/products2.html
@@ -102,7 +102,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Gnuts</h5>
                           <p class="card-text">100% Natural Peanut Groundnut Fresh Whole Raw Peanuts Best Quality Dry Fruit</p>
-                          <a href="#" class="btn btn-primary">Details</a>
+                          <a href="peas-gnuts.html" class="btn btn-primary">Details</a>
                         </div>
                       </div>
                 </div>
@@ -112,7 +112,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Maize</h5>
                           <p class="card-text">High-quality, dried maize kernels with a low moisture content, ideal for grinding into cornmeal.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="details.html" class="btn btn-primary">Details</a>
                         </div>
                       </div>
                 </div>
@@ -123,7 +123,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Beans</h5>
                           <p class="card-text">100% Natural beans Fresh.Ready for consuption.Readly available in stock in all varriaties</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="details.html" class="btn btn-primary">Details</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                         <div class="card-body">
                           <h5 class="card-title">cowpeas</h5>
                           <p class="card-text">High in protein and fiber.Used in soups, stews, porridges, and various traditional dishes</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="peas-gnuts.html" class="btn btn-primary">Details</a>
                         </div>
                       </div>
                 </div>
@@ -143,7 +143,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Soybeans</h5>
                           <p class="card-text">Different varriaties available.Used in soups, stews, porridges, and various traditional dishes.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="peas-gnuts.html" class="btn btn-primary">Details</a>
                         </div>
                       </div>
                 </div>
