--- a/index.html
+++ b/index.html
@@ -6,41 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
     <title>Document</title>
+    <style>
+        body{
+            background-image: url('images/back.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        
+        }
+        .par{
+            color: rgb(7, 8, 7);
+            font-weight: 300;
+            font-size: 35px;
+        }
+       
+    </style>
 </head>
-<body class="bg-light">
+<body>
     <div class="container-fluid mt-5" id="main">
         <div class="row">
-            <div class="col-md-7 text-center">
+            <div class="col-md-7 text-center text-green">
                 <h1>Welcome to Karibu Groceries Limited</h1><br>
-                <p >
+                <h2 class="par">
                     Karibu groceries LTD is a wholesale produce distributor dealing in cereals with 2 Branches in
-different locations. Over time all operations have been recorded in ruled black books. This has
-prompted the owner to seek for a software solution.
-                </p>
+                    different locations. Over time all operations have been recorded in ruled black books. This has
+                    prompted the owner to seek for a software solution.
+                </h2>
             </div>
             <div class="col-md-5">
                 <div class="card border-primary bg-success text-white" id="loginCard">
                     <div class="card-header">
-                        <h4 class ="card-title">Login</h4>
+                        <h4 class="card-title">Login</h4>
                     </div>
 
                     <div class="card-body">
                         <form>
                             <div class="form-group">
-                              <label for="exampleInputEmail1">Email address</label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
                             <div class="form-group">
-                              <label for="exampleInputPassword1">Password</label>
-                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                             </div>
                             <div class="form-check">
-                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                              <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Remember me</label>
                             </div>
                             <button type="submit" class="btn btn-light"><a href="dash.html">Submit</a></button>
-                          </form>
+                        </form>
                     </div>
                 </div>
             </div>
