--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
             background-repeat: no-repeat;
         
         }
+        .wrapper{
+            width: 700px;
+            height: 500px;
+            background: green;
+            padding: 5px;
+            margin: 5px auto;
+            display: absolute;
+            text-align: justify;
+            overflow-wrap: break-word;
+            box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
+            border-bottom-right-radius: 40px;
+            border-top-left-radius: 40px;
+            border: 1px solid rgb(139, 83, 73)
+        }
         .par{
-            color: rgb(7, 8, 7);
-            font-weight: 300;
-            font-size: 35px;
+            color: rgb(217, 230, 217);
+            font-weight: 500;
+            font-size: 30px;
         }
        
     </style>
@@ -25,14 +39,16 @@
 <body>
     <div class="container-fluid mt-5" id="main">
         <div class="row">
-            <div class="col-md-7 text-center text-green">
-                <h1>Welcome to Karibu Groceries Limited</h1><br>
-                <h2 class="par">
-                    Karibu groceries LTD is a wholesale produce distributor dealing in cereals with 2 Branches in
-                    different locations. Over time all operations have been recorded in ruled black books. This has
-                    prompted the owner to seek for a software solution.
-                </h2>
-            </div>
+            <div style="opacity: 90%;" class="wrapper ">
+                <div class="col-md-10 text-center text-green">
+                    <marquee><h1>Welcome to Karibu Groceries Limited</h1></marquee><br>
+                    <h2 class="par">
+                        Karibu groceries LTD is a wholesale produce distributor dealing in cereals with 2 Branches in
+                        different locations<br> Over time all operations have been recorded in ruled black books. This has
+                        prompted the owner to seek for a software solution.
+                    </h2>
+                </div>
+            </div> 
             <div class="col-md-5">
                 <div class="card border-primary bg-success text-white" id="loginCard">
                     <div class="card-header">
