--- a/user.html
+++ b/user.html
@@ -17,13 +17,13 @@
                     </div>
                     <div class="card-body bg-success">
                         <ul class="list-group ">
-                            <li class="list-group-item"><a href="/dashboard.html">Dashboard</a></li>
+                            <li class="list-group-item"><a href="dash.html">Dashboard</a></li>
                             <li class="list-group-item">Companies</li>
-                            <li class="list-group-item"><a href="/user.html">users</a></li>
-                            <li class="list-group-item"> <a href="/products2.html">Products</a></li>
+                            <li class="list-group-item"><a href="user.html">users</a></li>
+                            <li class="list-group-item"> <a href="products2.html">Products</a></li>
                             <li class="list-group-item">Payments</li>
                             <li class="list-group-item">Sales</li>
-                            <li class="list-group-item"><a href="/index.html">Logout</a></li>
+                            <li class="list-group-item"><a href="index.html">Logout</a></li>
                         </ul>
                     </div>
                 </div>
