modified the wrapper on the index page

--- a/user.html
+++ b/user.html
@@ -40,6 +40,8 @@
                                 <th scope="col">Branch</th>
                                 <th scope="col">Manager</th>
                                 <th scope="col">Attendant</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Phone</th>
                               </tr>
                             </thead>
                             <tbody>
@@ -50,6 +52,8 @@
                                 <td>Mr.Living Stone<br>
                                     Ms.Rachael Ankunda
                                 </td>
+                                <td>livingst@gmail.com<br>rachaelank@gmail.com</td>
+                                <td>+256773680805</td>
                               </tr>
                               <tr>
                                 <th scope="row">2</th>
@@ -57,6 +61,8 @@
                                 <td>Mr. Gilbert Stevens</td>
                                 <td>Mr. Robbinson Clark<br>
                                     Ms. Nicole Immaculate</td>
+                                <td>gilbertsetve23@gmail.com<br>robbinsonclark43@gmail.com</td>
+                                <td>+256773685873</td>
                               </tr>
                             </tbody>
                           </table>
