--- a/details.html
+++ b/details.html
@@ -5,20 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css//bootstrap-5.3.3/css/bootstrap.css">
         <link rel="stylesheet" href="css/stylesheets.css">
-        <title>Products</title>
+        <title>KGL</title>
         <style>
             body{
                 margin-top: 20px;
-            margin-left: 100px;
+            
             margin-bottom: 300px;
             height: fit-content;
             }
            .btn{
             margin-top: 50px;
            }
+           .footer{
+            width: auto;
+            background: black;
+            color: white;
+            
+           }
         </style>
     </head>
-    <body class="bg-light ">
+    <body style="margin-left: 100px;" class="bg-light ">
         <div class="col-md-9" id="products">
             <h1>Product details</h1>
             <div class="heading mt-4"><h2>Beans</h2></div>
@@ -126,5 +132,9 @@
                 <button type="button" class="btn btn-primary btn-lg ">Go back</button>
                 </a>
         </div><br>
+        <footer class="footer">
+            <p>© 2025 Karibu Grocerries. All Rights Reserved.</p>
+            <p>Contact us: <a href="karibugrocerries@gmail.com.com">kariburoceries@gmail.com</a></p>
+        </footer>
     </body>
 </html>
