--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             font-weight: 500;
             font-size: 30px;
         }
+        footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer a {
+    color: #FFD700;
+    text-decoration: none;
+}
        
     </style>
 </head>
@@ -77,6 +91,10 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <p>© 2025 Karibu Grocerries. All Rights Reserved.</p>
+        <p>Contact us: <a href="karibugrocerries.com">kariburoceries@gmail.com</a></p>
+    </footer>
     <script src="css/bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
 </body>
 </html>
