--- a/peas-gnuts.html
+++ b/peas-gnuts.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css//bootstrap-5.3.3/css/bootstrap.css">
         <link rel="stylesheet" href="css/stylesheets.css">
-        <title>Products</title>
+        <title>KGL</title>
         <style>
             body{
                 margin-top: 20px;
@@ -94,5 +94,9 @@
             <button type="button" class="btn btn-primary btn-lg mt-4 mb-10">Go back</button>
             </a>
         </div>
+        <footer>
+            <p>© 2025 Karibu Grocerries. All Rights Reserved.</p>
+            <p>Contact us: <a href="karibugrocerries@gmail.com.com">kariburoceries@gmail.com</a></p>
+        </footer>
     </body>
 </html>
