--- a/dash.html
+++ b/dash.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <link rel="stylesheet" href="css/stylessheet.css">
-    <title>Document</title>
+    <title>KGL</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -158,7 +158,7 @@
             </div>
         </div>
     </div>
-
+   
     <scrip src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js></script>
     <script src="css/bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
     <script src="chart1.js"></script>
