--- a/myaccount.html
+++ b/myaccount.html
@@ -1,85 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Profile Update</title>
-<style>
-body {
-  font-family: sans-serif;
-  background-image: url(/images/beansplus.jpg);
-	background-repeat: no-repeat;
-    background-size: cover;
-}
-.wrapper{
-	width: 800px;
-	height: 500px;
-	background: green;
-	padding: 10px;
-	margin: 100px auto;
-	box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
-	border-bottom-right-radius: 80px;
-	border-top-left-radius: 80px;
-	border: 1px solid rgb(139, 83, 73)
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css//bootstrap-5.3.3/css/bootstrap.css">
+  <link rel="stylesheet" href="css/stylesheets.css">
+  <title>KGL</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-image: url(/images/beansplus.jpg);
+      background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .wrapper{
+      width: 800px;
+      height: 500px;
+      background: green;
+      padding: 10px;
+      margin: 100px auto;
+      box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
+      border-bottom-right-radius: 80px;
+      border-top-left-radius: 80px;
+      border: 1px solid rgb(139, 83, 73)
 
 
-}
-.rounded-image {
-  width: 150px; /* Set your desired width */
-  height: 150px; /* Set your desired height (must be equal to width for a circle) */
-  border-radius: 50%; /* Makes the image round */
-  object-fit: cover; /* Important: maintains aspect ratio and fills the circle */
-}
-.container {
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: flex-start; /* Align items to the top */
-  min-height: 100vh; /* Ensure full viewport height */
-}
-.left-panel {
-  width: 250px; /* Adjust as needed */
-  padding: 20px;
-  border-right: 1px solid #ccc;
-}
-.right-panel {
-  flex: 1; /* Takes up remaining space */
-  padding: 20px;
-}
+    }
+    .rounded-image {
+      width: 150px; /* Set your desired width */
+      height: 150px; /* Set your desired height (must be equal to width for a circle) */
+      border-radius: 50%; /* Makes the image round */
+      object-fit: cover; /* Important: maintains aspect ratio and fills the circle */
+    }
+    .container {
+      display: flex;
+      justify-content: center; /* Center horizontally */
+      align-items: flex-start; /* Align items to the top */
+      min-height: 100vh; /* Ensure full viewport height */
+    }
+    .left-panel {
+      width: 250px; /* Adjust as needed */
+      padding: 20px;
+      border-right: 1px solid #ccc;
+    }
+    .right-panel {
+      flex: 1; /* Takes up remaining space */
+      padding: 20px;
+    }
 
-.form-group {
-  margin-bottom: 15px;
-}
+    .form-group {
+      margin-bottom: 15px;
+    }
 
-label {
-  width: 300px;
-  display: block;
-  margin-bottom: 5px;
-}
+    label {
+      width: 300px;
+      display: block;
+      margin-bottom: 5px;
+    }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  width: 300px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+      width: 300px;
+      padding: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
 
-button {
-    padding: 10px 15px;
-    background-color: #e4efe5; 
-    border: none;
-    cursor: pointer;
-    font-size: medium;
-    font-weight: 200;
-}
-.button:hover{
-    background-color: rgb(147, 234, 139);
-    color: white;
-}
-.right-panel:hover{
-  background: white;
-  color: green;
-}
-</style>
+    button {
+        padding: 10px 15px;
+        background-color: #e4efe5; 
+        border: none;
+        cursor: pointer;
+        font-size: medium;
+        font-weight: 200;
+    }
+    .button:hover{
+        background-color: rgb(147, 234, 139);
+        color: white;
+    }
+    .right-panel:hover{
+      background: white;
+      color: green;
+    }
+  </style>
 </head>
 <body>
   <div style="opacity: 90%;" class="wrapper ">
@@ -126,5 +130,9 @@ button {
       </div>
     </div>
   </div>
+  <footer>
+    <p>© 2025 Karibu Grocerries. All Rights Reserved.</p>
+    <p>Contact us: <a href="karibugrocerries@gmail.com.com">kariburoceries@gmail.com</a></p>
+</footer>
 </body>
 </html>
