--- a/user.html
+++ b/user.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css//bootstrap-5.3.3/css/bootstrap.css">
     <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Products</title>
+    <title>KGL</title>
 </head>
 <body style="background-image: url('images/varieties.jpg'); background-size: cover;"></body>
     <div class="container-fluid mt-2">
@@ -76,10 +76,13 @@
     </div>
 </body>
 </html>
+<footer>
+    <p>© 2025 Karibu Grocerries. All Rights Reserved.</p>
+    <p>Contact us: <a href="karibugrocerries@gmail.com.com">kariburoceries@gmail.com</a></p>
+</footer>
 
-
-    <scrip src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js></script>
-    <script src="css/bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
-    <script src="chart1.js"></script>
+<scrip src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js></script>
+<script src="css/bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
+<script src="chart1.js"></script>
 </body>
 </html>
