modified the products page

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             font-size: 30px;
         }
         footer {
-    background-color: #333;
+    background-color: #17814c;
     color: white;
     text-align: center;
-    padding: 20px 0;
+    padding: 5px 0;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -84,7 +84,7 @@ footer a {
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">Remember me</label>
                             </div>
-                            <button type="submit" class="btn btn-light"><a href="dash.html">Submit</a></button>
+                            <button type="submit" class="btn btn-light"><a href="dash.html">Login</a></button>
                         </form>
                     </div>
                 </div>
