--- a/products2.html
+++ b/products2.html
@@ -94,8 +94,8 @@
                 </ul>
             </div>
         </div>
-        <div class="col-md-9" id="products">
-            <h1>Products</h1>
+        <div class="col-md-9 bg-secondary-subtle" id="products">
+            <h1 class="bg-success text-white text-center"><b> Our Products</b></h1>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
