--- a/myaccount.html
+++ b/myaccount.html
@@ -130,6 +130,9 @@
       </div>
     </div>
   </div>
+  <scrip src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js></script>
+    <script src="css/bootstrap-5.3.3/js/bootstrap.bundle.js"></script>
+    <script src="chart1.js"></script>
   <footer>
     <p>© 2025 Karibu Grocerries. All Rights Reserved.</p>
     <p>Contact us: <a href="karibugrocerries@gmail.com.com">kariburoceries@gmail.com</a></p>
