changed my contact page

--- a/myaccount.html
+++ b/myaccount.html
@@ -16,7 +16,8 @@
     .wrapper{
       width: 800px;
       height: 550px;
-      background: green;
+      font-weight: 500;
+      background: rgb(31, 147, 25);
       padding: 10px;
       margin: 100px auto;
       box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
@@ -63,7 +64,7 @@
     input[type="password"] {
       width: 300px;
       padding: 8px;
-      border: 1px solid #ccc;
+      border: 3px solid #898585;
       box-sizing: border-box;
     }
 
@@ -76,7 +77,7 @@
         font-weight: 200;
     }
     .button:hover{
-        background-color: rgb(147, 234, 139);
+        background-color: rgb(15, 74, 10);
         color: white;
     }
     .right-panel:hover{
@@ -86,8 +87,8 @@
   </style>
 </head>
 <body>
-  <div style="opacity: 90%;" class="wrapper ">
-    <div class="container">
+  <div style="opacity: 80%;" class="wrapper ">
+    <div  class="container">
       <div class="left-panel">
         <div class="profile-info">
           <img src="images/myimage.jpg" alt="Profile Picture" width="200" class="rounded-image"> <br> <br>
