--- a/myaccount.html
+++ b/myaccount.html
@@ -16,10 +16,12 @@
     .wrapper{
       width: 800px;
       height: 550px;
+      margin-top: 100px;
+      margin-left: 200px;
       font-weight: 500;
       background: rgb(31, 147, 25);
       padding: 10px;
-      margin: 100px auto;
+     align-content: center;
       box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
       border-bottom-right-radius: 80px;
       border-top-left-radius: 80px;
